--- a/libraries-books/src/main/resources/application.yml
+++ b/libraries-books/src/main/resources/application.yml
@@ -6,10 +6,11 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:file:./projection
     driverClassName: org.h2.Driver
     username: sa
     password: sa
-
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
