--- a/libraries-books/pom.xml
+++ b/libraries-books/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.feazesa</groupId>
-    <artifactId>command-processor</artifactId>
+    <artifactId>libraries-books</artifactId>
     <version>1.0</version>
 
     <properties>
