--- a/reservation-service/pom.xml
+++ b/reservation-service/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.feazesa</groupId>
-    <artifactId>data-provider</artifactId>
+    <artifactId>reservation-service</artifactId>
     <version>1.0</version>
 
     <properties>
@@ -33,22 +33,12 @@
         <!-- Spring-boot dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- Spring-boot jpa support-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <!-- Spring-boot validation support -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <!-- postgresql relational database driver-->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
         </dependency>
         <!-- In-memory relational database-->
         <dependency>
