--- a/reservation-service/src/main/resources/application.yml
+++ b/reservation-service/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: libraries-books
+    name: reservation-service
   h2:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:file:./libraries-books-projection
+    url: jdbc:h2:file:./reservation-service-projection
     driverClassName: org.h2.Driver
     username: sa
     password: sa
